# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  controller.py  gendiff.py
gendiff/diffs_views/: __init__.py  json.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  json.py  plain.py  plain_helpers.py  stylish.py  stylish_helpers.py
gendiff/models/: calc_diff.py
gendiff/scripts/: main.py
gendiff/utils/: colored.py  common.py  file_parsing.py  file_reader.py
gendiff/views/: main.py
gendiff/views/json/: view.py
gendiff/views/plain/: utils.py  view.py
gendiff/views/stylish/: utils.py  view.py
tests/: conftest.py  test_generate_diff.py
tests/test_data/deep/: diffs_format_json.json
tests/test_data/deep_yml/: diff_stylish_colored.txt
tests/test_deep_files/: test_json_format_with_deep_files.py  test_plain_format_with_deep_files.py  test_stylish_colored_format_with_deep_files.py  test_stylish_format_with_deep_files.py
tests/test_flat_files/: test_stylish_format_with_flat_files.py
