[project]
name = "hexlet-code"
version = "0.1.0"
description = "Utility for finding differences in files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[project.scripts]
gendiff = "gendiff.scripts.main:main"
